--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -21,7 +21,7 @@
             <div class="col-lg-8 col-md-11 col-sm-12 col-11">
                 <i class="i i-instagram"></i>
                 <h1>Por que não devemos deixar nossa aposentadoria nas mãos do governo e começar a investir no nosso futuro</h1>
-                <p>Motivos para não confiar sua aposentadoria inteiramente no governo federal, enquanto o estadual já fez parcelamento de salário de funcionários ativos.</p>
+                <p class="subtitulo">Motivos para não confiar sua aposentadoria inteiramente no governo federal, enquanto o estadual já fez parcelamento de salário de funcionários ativos.</p>
                 <p id="creditos">Por <a target="_blank" href="https://leonardowkr.github.io/programa-html-css/desafios/d005/">Leonardo Wecker</a> - Novo Hamburgo
                                 <span>
                                     <a href="https://www.instagram.com/_leoweck/"
