--- a/desafios/d014/postos-e-graduacoes.html
+++ b/desafios/d014/postos-e-graduacoes.html
@@ -14,7 +14,7 @@
 
 <body>
     <header id="cabecalho">
-        <h1>AZM, militar!</h1>
+        <h1>AZM, militar1111!</h1>
     </header>
     <div class="container">
         <div class="row">
@@ -47,7 +47,7 @@
                 </p>
                 
                 <figure>
-                    <img src="imagens/Soldado_EB.png" class="col-lg-2 col-6" alt="">
+                    <img src="imagens/Soldado_EB.png" class="col-lg-2 col-4" alt="">
                     <caption></caption>
                 </figure>
                 
@@ -55,35 +55,35 @@
                     <strong>Soldado - </strong>Você precisa ter cautela com esse posto, porque apesar de na teoria vocês dois serem soldados, você é recruta e ele, do efetivo profissional. É aquela pessoa que já usou toda a sua energia no primeiro ano, e agora, só é mais um preguiçoso quando pode e um posto que não comanda ninguém.
                 </p>
                 <figure></figure>
-                    <img src="imagens/Cabo_do_Exercito_Brasileiro.jpg" class="col-lg-2 col-6 espacamento-imagens" alt="">
+                    <img src="imagens/Cabo_do_Exercito_Brasileiro.jpg" class="col-lg-2 col-4 espacamento-imagens" alt="">
                     <caption></caption>
                 </figure>
                 <p class="espacamento-paragrafo identacao">
                     <strong>Cabo - </strong>É o posto que já comanda várias operações importantíssimas. Desde a faxina e limpeza das companhias a oficinais, salões, pistas de atletismo, tudo. Se pisar na bola com um que já está no último ou penúltimo ano da serviço militar dele, ou você vai levar uma mijada violenta, ou ele vai cagar, como quem já caga quando está de aviso-prévio. 
                 </p>
                 <figure>
-                    <img src="imagens/3_Sargento_EB.jpg" class="col-lg-2 col-6" alt="">
+                    <img src="imagens/3_Sargento_EB.jpg" class="col-lg-2 col-4" alt="">
                     <caption></caption>
                 </figure>
                 <p class="espacamento-paragrafo identacao">
                     <strong>3° Sargento - </strong> Você vai ter muito contato, pois eles estão em toda parte. A maior parte deles são gente fina. Comanda várias missões, desde comandante da guarda ao quartel, comandante de viatura e missões externas. É o posto máximo pra quem entrou pelo serviço miltar obrigatório.
                 </p>
                 <figure></figure>
-                    <img src="imagens/2_Sargento_EB.jpg" class="col-lg-2 col-6" alt="">
+                    <img src="imagens/2_Sargento_EB.jpg" class="col-lg-2 col-4" alt="">
                     <caption></caption>
                 </figure>
                 <p class="espacamento-paragrafo identacao">
                     <strong>2° Sargento - </strong>Será o sargento responsável pelas manutenção das companhias dos quartéis, quando estão de serviço. São os mais tranquilos geralmente, pois já passaram da fase de empolgação quando entraram na carreira de sargento pelo fato de ter passado - pelo menos - mais de 10 anos nas fileiras do exército. Esses já sabem todas as manhas da caminhada. É nessa fase que começam a engordar, pois não são mais demitidos - ou seja, o TAF (Teste de Aptidão Física) já não é mais tão relevante.  
                 </p>
                 <figure>
-                    <img src="imagens/1_Sargento_EB.jpg" class="col-lg-2 col-6" alt="">
+                    <img src="imagens/1_Sargento_EB.jpg" class="col-lg-2 col-4" alt="">
                     <caption></caption>
                 </figure>
                 <p class="espacamento-paragrafo identacao">
                     <strong>1° Sargento - </strong>Quando em serviço, como adjunto-a-oficial, prestará auxílio ao oficial de dia. Já passarm da metade de sua carreira dentro do exército, assim, adquiriram muita experiência de quartel. São eles que comandam algumas seções de trabalho. Alguns são tranquilos e outros pegaram nojo da carreira e se tornarm super rígidos ao longo de sua jornada, mas não largam o osso porque se aposetam muito bem, obrigado.
                 </p>
                 <figure></figure>
-                    <img src="imagens/Subtenente.png" class="col-lg-2 col-12" alt="">
+                    <img src="imagens/Subtenente.png" class="col-lg-2 col-4" alt="">
                     <caption></caption>
                 </figure>
                 <p class="espacamento-paragrafo identacao">
