--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -64,13 +64,33 @@
                             alt=""
                     /></a>
                 </div>
-                <div class="imagens"></div>
+                <div class="imagens">
                     <a
                         target="_blank"
                         href="https://leonardowkr.github.io/programa-html-css/desafios/d014/"
                         ><img
                             class="col-lg-6 col-10"
                             src="projeto04.png"
+                            alt=""
+                    /></a>
+                </div>
+                <div class="imagens">
+                    <a
+                        target="_blank"
+                        href="https://leonardowkr.github.io/programa-html-css/desafios/d014/postos-e-graduacoes"
+                        ><img
+                            class="col-lg-6 col-10"
+                            src="projeto5.png"
+                            alt=""
+                    /></a>
+                </div>
+                <div class="imagens">
+                    <a
+                        target="_blank"
+                        href="https://leonardowkr.github.io/programa-html-css/desafios/d014/quadros-e-servicos"
+                        ><img
+                            class="col-lg-6 col-10"
+                            src="projeto6.png"
                             alt=""
                     /></a>
                 </div>
