--- a/desafios/d014/postos-e-graduacoes.html
+++ b/desafios/d014/postos-e-graduacoes.html
@@ -170,7 +170,7 @@
                 </p>
                 </figure>
                 <figure></figure>
-                    <img src="imagens/Marechal.gif" class="col-lg-4 col-6" alt="">
+                    <img src="imagens/Marechal.gif" class="col-lg-4 col-6 espacamento-imagens" alt="">
                     <caption></caption>
                 </figure>
                 <p class="espacamento-paragrafo identacao">
