--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -145,7 +145,7 @@
                 </div>
             </div>
         </div>
-         <section>
+         <!--<section>
             <div class="container">
                 <div class="row">
                     <div id="formulario" class="col-lg-7 col-8">
@@ -174,6 +174,6 @@
                 </div>
             </div>
        </section>
-    
+    -->
     </body>
 </html>
