--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -27,8 +27,7 @@
             </strong> pelo Instituto Federal de Novo Hamburgo (IFSul-NH), estado do Rio
             Grande do Sul. Depois de formado, agora estou cursando graduação em
             <strong>Análise e Desenvolvimento de Sistemas</strong> na Instituição Evangélica de Novo Hamburgo (IENH), além de estar estudando no
-            meu horário livre as linguagens front-end HTML, CSS e JavaScript e também no 
-            no back-end com Java.
+            meu horário livre as linguagens front-end HTML, CSS e JavaScript e também no back-end com Java.
         </p>
         <h2>Projetos realizados</h2>
         <p>Clique na imagem para conferir</p>
