--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -102,7 +102,7 @@
         <h2>Como falar comigo?</h2>
         <div class="container">
             <div class="row">
-                <div class="col-10 col-lg-10">
+                <div class="col-10 col-lg-10 center">
                     <ul>
                         <li>
                             <i class="fa fa-facebook-square"></i><a
@@ -111,7 +111,7 @@
                                 target="_blank"
                                 >/leonardo.wecker</a
                             >
-                            - Me acompanha lá no Facebook
+                            <span>- Me acompanha lá no Facebook</span>
                         </li>
                         <li>
                             <i class="fa fa-instagram"></i><a
@@ -120,7 +120,7 @@
                                 target="_blank"
                                 >/_leoweck</a
                             >
-                            - Me segue lá no Instagram
+                            <span>- Me segue lá no Instagram</span>
                         </li>
                         <!--<li>
                             <i class="fa fa-twitter-square"></i><a
@@ -137,7 +137,7 @@
                                 rel="author"
                                 target="_blank"
                                 >/Leonardo Wecker</a
-                            >- Me acompanha lá no LinkedIn
+                            ><span>- Me acompanha lá no LinkedIn</span>
                             </i>
                         </li>
                     </ul>
