add github icon

--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -125,11 +125,11 @@
                         <!--<li>
                             <i class="fa fa-twitter-square"></i><a
                                 href="https://twitter.com/Leonardelo17"
-                                rel="author"
+                                rel="author"    https://github.com/leonardowkr
                                 target="_blank"
                                 >/Leonardelo17</a
                             >- Me segue lá no Twitter
-                        </li>-->
+                        </li>-->    
                         <li>
                             <i class="fa fa-linkedin-square">
                                 </i><a
@@ -138,6 +138,16 @@
                                 target="_blank"
                                 >/Leonardo Wecker</a
                             ><span>- Me acompanha lá no LinkedIn</span>
+                            </i>
+                        </li>
+                        <li>
+                            <i class="fa fa-github-square">
+                                </i><a
+                                href="https://github.com/leonardowkr"
+                                rel="author"
+                                target="_blank"
+                                >/Leonardo Wecker</a
+                            ><span>- Me acompanha lá no GitHub</span>
                             </i>
                         </li>
                     </ul>
